# Iran-System-encoding

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.fa.md  README.md  build_c_extension.py  demo.py  demo_iran_system.py  iransystem_converter.py  qodana.yml  requirements.txt  setup.cfg  setup.py  setup_c_extension.py  test_encoding.py
.github/workflows/: ci.yml  publish-to-pypi.yml  python-package-conda.yml  python-publish.yml  qodana-ci.yml
.qodana/: qodana.yaml  qodana.yml
docs/: api.md  examples.md  usage.md
examples/: advanced_features.py  basic_usage.py
iran_encoding/: __init__.py  c_wrapper.py  cli.py  converter.py  core.py  iran_system.c  iran_system.h  mappings.py  utils.py  websockets.py
iran_encoding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/iran_encoding/: __init__.py  cli.py  core.py  exceptions.py
src/iran_encoding/api/: websocket.py
src/iran_encoding/apps/: cli.py  websockets.py
src/iran_encoding/core/: __init__.py  mappings.py
src/iran_encoding/utils/: __init__.py
tests/: __init__.py  corpus.json  test_api.py  test_c_comparison.py  test_cli.py  test_converter.py  test_core.py  test_corpus.py  test_encoding.py  test_encoding_functions.py  test_exact_behavior.py  test_iran_system_v1.py  test_mixed_reversal.py  test_suite.py  test_utils.py  test_websockets.py
wiki/: README.fa.md  README.md  technical-details.fa.md  technical-details.md  troubleshooting.fa.md  troubleshooting.md  usage-guide.fa.md  usage-guide.md
