[metadata]
name = iran-encoding
version = 1.1.0
description = Professional Iran System encoding library
long_description = file: README.md
long_description_content_type = text/markdown
author = MovtiGroup
author_email = info@movtigroup.ir
url = https://github.com/movtigroup/Iran-System-encoding
project_urls =
    Bug Tracker = https://github.com/movtigroup/Iran-System-encoding/issues
    Documentation = https://iran-system-encoding.readthedocs.io/
    Source Code = https://github.com/movtigroup/Iran-System-encoding
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: General

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    arabic-reshaper>=2.1.3
    python-bidi>=0.4.2
    websockets>=10.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    iran-encoding = iran_encoding.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio
    pytest-cov>=4.0.0
    black>=22.0.0
    mypy>=0.900
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
